# vibe-bt-03

./: .env.example  .gitignore  README.md  pyproject.toml  架构文档.md
.codex/environments/: environment.toml
.codex/local-environment/: README.md  clean.macos.sh  clean.ps1  clean.sh  setup.macos.sh  setup.ps1  setup.sh  verify.macos.sh  verify.ps1  verify.sh
src/vibe_bt_03/: __init__.py
src/vibe_bt_03/analytics/: __init__.py
src/vibe_bt_03/backtest/: __init__.py
src/vibe_bt_03/config/: __init__.py  app.py  database.py  datasource.py  ingestion.py  logging.py  paths.py  settings.py
src/vibe_bt_03/core/: __init__.py
src/vibe_bt_03/data_access/: __init__.py
src/vibe_bt_03/data_ingestion/: __init__.py  batching.py  errors.py  resolvers.py  results.py  workflows.py
src/vibe_bt_03/data_ingestion/normalizers/: __init__.py  common.py  future_bars.py  instruments.py  stock_bars.py
src/vibe_bt_03/data_ingestion/sources/: __init__.py  akshare.py  base.py  tushare.py
src/vibe_bt_03/data_ingestion/validators/: __init__.py  (+2 more)
src/vibe_bt_03/database/: engine.py  errors.py  session.py
src/vibe_bt_03/quant/: __init__.py
src/vibe_bt_03/strategy/: __init__.py
src/vibe_bt_03/use_cases/: __init__.py
src/vibe_bt_03/user_interface/: __init__.py
tests/config/: test_settings.py
tests/data_ingestion/: test_normalizers_validators.py  test_resolvers.py  test_sources.py  test_workflows.py
tests/database/: conftest.py  test_manage_connection.py  test_manage_health.py  test_manage_schema.py
tests/use_cases/: test_data_ingestion_use_cases.py  test_database_use_cases.py
(+35 files in other folders)
