[project]
name = "vibe-bt-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "WEAhzm", email = "huangzemin@we-architects.cn" }
]
requires-python = ">=3.13.13"
dependencies = [
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
]

[project.scripts]
vibe-bt-03 = "vibe_bt_03:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
